--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exploring github</title>
 </head>
 <body>
-    
+     <div>
+        <h2>For every other time</h2>
+        <p>git add .</p>
+        <p>git commit -m"your massage"</p>
+        <p>git push</p>
+     </div>
 </body>
 </html>
